# tratamento de retornos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 app.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/fatura_cartao_credito
 app.datasource.username=postgres
 app.datasource.password=password
+
+# Inicializa o schema batch:
 spring.batch.initialize-schema=always
