# commit da batch-sidejud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/spring_batch
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driverClassName=org.postgresql.Driver
-
-app.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/fatura_cartao_credito
-app.datasource.username=postgres
-app.datasource.password=password
-
-# Inicializa o schema batch:
-spring.batch.initialize-schema=always
+#spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/spring_batch
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.driverClassName=org.postgresql.Driver
+#
+#app.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/fatura_cartao_credito
+#app.datasource.username=postgres
+#app.datasource.password=password
+#
+## Inicializa o schema batch:
+#spring.batch.initialize-schema=always
